force-app/main/default/objects/Event__c/fields/Event_End_Time2__c.field-meta.xml
<CustomField>
    <fullName>Event_End_Time2__c</fullName>
    <label>Event - End Time</label>
    <type>TextArea</type>
</CustomField>