force-app/main/default/objects/Event__c/fields/Event_ends__c.field-meta.xml
<CustomField>
    <fullName>Event_ends__c</fullName>
    <label>Event Ends*</label>
    <length>50</length>
    <type>Text</type>
</CustomField>