force-app/main/default/objects/Event__c/fields/Event_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Event_Frequency__c</fullName>
    <label>Event Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual event</fullName>
            </value>
            <value>
                <fullName>Bi-annual event</fullName>
            </value>
            <value>
                <fullName>One off event</fullName>
            </value>
            <value>
                <fullName>Unknown - Data Task</fullName>
            </value>
            <value>
                <fullName>Annual Subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>