force-app/main/default/objects/Event__c/fields/event_link__c.field-meta.xml
<CustomField>
    <fullName>event_link__c</fullName>
    <formula>&quot;/givergy/s/event/&quot;&amp;Id</formula>
    <label>event link</label>
    <type>Text</type>
</CustomField>