force-app/main/default/objects/Event__c/fields/Event_Manager__c.field-meta.xml
<CustomField>
    <fullName>Event_Manager__c</fullName>
    <label>Event Manager Required*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>