force-app/main/default/objects/Event__c/fields/Event_Manager_Arrive__c.field-meta.xml
<CustomField>
    <fullName>Event_Manager_Arrive__c</fullName>
    <label>Event Manager Arrive*</label>
    <length>50</length>
    <type>Text</type>
</CustomField>