force-app/main/default/objects/Event__c/fields/Event_Manager_Booked__c.field-meta.xml
<CustomField>
    <fullName>Event_Manager_Booked__c</fullName>
    <label>Event Manager Booked</label>
    <type>TextArea</type>
</CustomField>