force-app/main/default/objects/Event__c/fields/Event_Manager_Shadow__c.field-meta.xml
<CustomField>
    <fullName>Event_Manager_Shadow__c</fullName>
    <label>Event Manager Shadow</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>