force-app/main/default/objects/Event__c/fields/Event_Notes__c.field-meta.xml
<CustomField>
    <fullName>Event_Notes__c</fullName>
    <label>Event Notes - For brief docs*</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>