force-app/main/default/objects/Event__c/fields/Event_Photos__c.field-meta.xml
<CustomField>
    <fullName>Event_Photos__c</fullName>
    <description>Update this field to indicate if the client is willing to have their event photographed for Givergy&apos;s marketing materials</description>
    <inlineHelpText>Update this field to indicate if the client is willing to have their event photographed for Givergy&apos;s marketing materials</inlineHelpText>
    <label>Event Photos*</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Client to approve before use</fullName>
            </value>
            <value>
                <fullName>Client to share post event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>