force-app/main/default/objects/Event__c/fields/Event_profitability__c.field-meta.xml
<CustomField>
    <fullName>Event_profitability__c</fullName>
    <formula>Profit_of_event__c /  Total_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event profitability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>