force-app/main/default/objects/Event__c/fields/Event_result_Givergy_profit__c.field-meta.xml
<CustomField>
    <fullName>Event_result_Givergy_profit__c</fullName>
    <label>Givergy Items: Givergy Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>