force-app/main/default/objects/Event__c/fields/Event_results_charity_profit__c.field-meta.xml
<CustomField>
    <fullName>Event_results_charity_profit__c</fullName>
    <label>Givergy Item: Charity profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>