force-app/main/default/objects/Event__c/fields/Event_results_live_sold__c.field-meta.xml
<CustomField>
    <fullName>Event_results_live_sold__c</fullName>
    <label>Givergy Items: Live Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>