force-app/main/default/objects/Event__c/fields/Event_results_revenue__c.field-meta.xml
<CustomField>
    <fullName>Event_results_revenue__c</fullName>
    <label>Givergy Items Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>