force-app/main/default/objects/Event__c/fields/Event_results_supplier_costs__c.field-meta.xml
<CustomField>
    <fullName>Event_results_supplier_costs__c</fullName>
    <label>Givergy Items Supplier Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>