force-app/main/default/objects/Event__c/fields/Event_results_total_sold__c.field-meta.xml
<CustomField>
    <fullName>Event_results_total_sold__c</fullName>
    <formula>Event_results_live_sold__c +  Event_results_silent_sold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Givergy Items: Total Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>