force-app/main/default/objects/Event__c/fields/Event_staff_arrive__c.field-meta.xml
<CustomField>
    <fullName>Event_staff_arrive__c</fullName>
    <label>Event Support Arrive*</label>
    <length>50</length>
    <type>Text</type>
</CustomField>