force-app/main/default/objects/Event__c/fields/Event_Staff_Required__c.field-meta.xml
<CustomField>
    <fullName>Event_Staff_Required__c</fullName>
    <formula>Event_Manager__c+Event_Support__c+Tech_Manager__c+Tech_Support__c+Mobile_Event_Manager__c+Tech_Manager_Shadow__c+Event_Manager_Shadow__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onsite Staff Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>