force-app/main/default/objects/Event__c/fields/Event_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_Date__c</fullName>
    <description>This is the start date synced from the campaign in the CMS. Note, this will convert into your personal timezone in SF. This can only be updated in the CMS.</description>
    <label>Campaign Start Date*</label>
    <type>DateTime</type>
</CustomField>