force-app/main/default/objects/Event__c/fields/Event_Start_Time2__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_Time2__c</fullName>
    <label>Event - Start Time</label>
    <type>TextArea</type>
</CustomField>