force-app/main/default/objects/Event__c/fields/Event_Status__c.field-meta.xml
<CustomField>
    <fullName>Event_Status__c</fullName>
    <label>Event Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Postponed</fullName>
            </value>
            <value>
                <fullName>Event Date TBC</fullName>
            </value>
            <value>
                <fullName>Not Contacted</fullName>
                <default>true</default>
                <label>Not Contacted</label>
            </value>
            <value>
                <fullName>Contacted</fullName>
                <label>Intro Sent</label>
            </value>
            <value>
                <fullName>Meeting Held</fullName>
                <label>Consultation Meeting</label>
            </value>
            <value>
                <fullName>Logistics Meeting</fullName>
            </value>
            <value>
                <fullName>Copy Check Ready</fullName>
            </value>
            <value>
                <fullName>Copy Check Complete</fullName>
            </value>
            <value>
                <fullName>Pre-event Launch</fullName>
            </value>
            <value>
                <fullName>Handover Call</fullName>
            </value>
            <value>
                <fullName>Event Ready</fullName>
            </value>
            <value>
                <fullName>Event Complete</fullName>
            </value>
            <value>
                <fullName>Debrief Booked</fullName>
                <label>Debrief</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>