force-app/main/default/objects/Event__c/fields/Event_Support_Booked__c.field-meta.xml
<CustomField>
    <fullName>Event_Support_Booked__c</fullName>
    <label>Event Support Booked</label>
    <type>TextArea</type>
</CustomField>