force-app/main/default/objects/Event__c/fields/Event_Support_Finish__c.field-meta.xml
<CustomField>
    <fullName>Event_Support_Finish__c</fullName>
    <label>Event Support Finish*</label>
    <length>50</length>
    <type>Text</type>
</CustomField>