force-app/main/default/objects/Event__c/fields/EventID18__c.field-meta.xml
<CustomField>
    <fullName>EventID18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EventID18</label>
    <type>Text</type>
</CustomField>