force-app/main/default/objects/Event__c/fields/Finance_Ding_Notes__c.field-meta.xml
<CustomField>
    <fullName>Finance_Ding_Notes__c</fullName>
    <label>Finance Ding Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>