force-app/main/default/objects/Event__c/fields/GDPR_Received__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DPA Signed</label>
    <type>Checkbox</type>
</CustomField>