force-app/main/default/objects/Event__c/fields/General_notes__c.field-meta.xml
<CustomField>
    <fullName>General_notes__c</fullName>
    <label>OWR general notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>