force-app/main/default/objects/Event__c/fields/Geographic_Region__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Region__c</fullName>
    <label>Geographic Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Geographic_Region</valueSetName>
    </valueSet>
</CustomField>