force-app/main/default/objects/Event__c/fields/Givergy_auction_item_profit__c.field-meta.xml
<CustomField>
    <fullName>Givergy_auction_item_profit__c</fullName>
    <formula>Event_results_revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auction item revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>