force-app/main/default/objects/Event__c/fields/Givergy_Auction_Items_Listed_Live__c.field-meta.xml
<CustomField>
    <fullName>Givergy_Auction_Items_Listed_Live__c</fullName>
    <label># Givergy Items Listed in CMS - Live</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>