force-app/main/default/objects/Event__c/fields/Givergy_com_Commission__c.field-meta.xml
<CustomField>
    <fullName>Givergy_com_Commission__c</fullName>
    <label>Givergy.com Commission</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>