force-app/main/default/objects/Event__c/fields/Givergy_Host1__c.field-meta.xml
<CustomField>
    <fullName>Givergy_Host1__c</fullName>
    <label>Givergy Host UK</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>With Givergy Host</fullName>
            </value>
            <value>
                <fullName>Previous Event Without Host</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>