force-app/main/default/objects/Event__c/fields/Givergy_Host__c.field-meta.xml
<CustomField>
    <fullName>Givergy_Host__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Givergy Host</label>
    <type>Checkbox</type>
</CustomField>