force-app/main/default/objects/Event__c/fields/Givergy_Items_Contractual_Difference__c.field-meta.xml
<CustomField>
    <fullName>Givergy_Items_Contractual_Difference__c</fullName>
    <formula>Total_items_listed__c - Actual_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Givergy Items Contractual Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>