force-app/main/default/objects/Event__c/fields/Givergy_Pledge_Payment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Givergy_Pledge_Payment_Fee__c</fullName>
    <label>Payment Fee - Pledge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>