force-app/main/default/objects/Event__c/fields/Givergy_Profit_From_Stripe_Card_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Givergy_Profit_From_Stripe_Card_Revenue__c</fullName>
    <formula>Total_Amount_To_Collect__c * 0.025</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>