force-app/main/default/objects/Event__c/fields/Givergy_tech_fee__c.field-meta.xml
<CustomField>
    <fullName>Givergy_tech_fee__c</fullName>
    <formula>Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>