force-app/main/default/objects/Event__c/fields/Givergy_Virtual__c.field-meta.xml
<CustomField>
    <fullName>Givergy_Virtual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Givergy Virtual +</label>
    <type>Checkbox</type>
</CustomField>