force-app/main/default/objects/Event__c/fields/GivergyVirtual_Email__c.field-meta.xml
<CustomField>
    <fullName>GivergyVirtual_Email__c</fullName>
    <label>Givergy Virtual Username*</label>
    <type>Email</type>
</CustomField>