force-app/main/default/objects/Event__c/fields/GivergyVirtual_Password__c.field-meta.xml
<CustomField>
    <fullName>GivergyVirtual_Password__c</fullName>
    <label>Givergy Virtual Password*</label>
    <type>TextArea</type>
</CustomField>