force-app/main/default/objects/Event__c/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <label>GL Code</label>
    <length>9</length>
    <type>Text</type>
</CustomField>