force-app/main/default/objects/Event__c/fields/GL_Ref__c.field-meta.xml
<CustomField>
    <fullName>GL_Ref__c</fullName>
    <label>GL Ref</label>
    <length>3</length>
    <type>Text</type>
</CustomField>