force-app/main/default/objects/Event__c/fields/GLI_50_50_Raffle_Actual__c.field-meta.xml
<CustomField>
    <fullName>GLI_50_50_Raffle_Actual__c</fullName>
    <label>GLI 50:50 Raffle Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>