force-app/main/default/objects/Event__c/fields/GLI_Jackpot_Raffle_Collected_by_Giverg__c.field-meta.xml
<CustomField>
    <fullName>GLI_Jackpot_Raffle_Collected_by_Giverg__c</fullName>
    <label>GLI 50:50 Raffle - Collected by Givergy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>