force-app/main/default/objects/Event__c/fields/GLI_Jackpot_Raffle_Payment_Fee__c.field-meta.xml
<CustomField>
    <fullName>GLI_Jackpot_Raffle_Payment_Fee__c</fullName>
    <label>GLI 50:50 Raffle Platform &amp; Payment Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>