force-app/main/default/objects/Event__c/fields/GLI_Raffle__c.field-meta.xml
<CustomField>
    <fullName>GLI_Raffle__c</fullName>
    <label>Raffle Payment Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>