force-app/main/default/objects/Event__c/fields/GLI_Raffle_Collected_by_Givergy__c.field-meta.xml
<CustomField>
    <fullName>GLI_Raffle_Collected_by_Givergy__c</fullName>
    <label>GLI Prize Raffle - Collected by Givergy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>