force-app/main/default/objects/Event__c/fields/GLI_Raffle_Platform_Fee__c.field-meta.xml
<CustomField>
    <fullName>GLI_Raffle_Platform_Fee__c</fullName>
    <label>GLI Prize Raffle Platform &amp; Payment Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>