force-app/main/default/objects/Event__c/fields/GLI_Raffle_Recovered_Fees__c.field-meta.xml
<CustomField>
    <fullName>GLI_Raffle_Recovered_Fees__c</fullName>
    <label>GLI Prize Raffle Recovered Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>