force-app/main/default/objects/Event__c/fields/Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin__c</fullName>
    <label>Gross Margin</label>
    <length>18</length>
    <type>Text</type>
</CustomField>