force-app/main/default/objects/Event__c/fields/Guest_Query_Contact__c.field-meta.xml
<CustomField>
    <fullName>Guest_Query_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guest Query Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Events (Guest Query Contact)</relationshipLabel>
    <relationshipName>Events3</relationshipName>
    <type>Lookup</type>
</CustomField>