force-app/main/default/objects/Event__c/fields/Guests_arrive__c.field-meta.xml
<CustomField>
    <fullName>Guests_arrive__c</fullName>
    <label>Guests Arrive*</label>
    <length>50</length>
    <type>Text</type>
</CustomField>