force-app/main/default/objects/Event__c/fields/Guests_seated__c.field-meta.xml
<CustomField>
    <fullName>Guests_seated__c</fullName>
    <label>Guests Seated*</label>
    <length>50</length>
    <type>Text</type>
</CustomField>