force-app/main/default/objects/Event__c/fields/Head_of_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Accounts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Head of Accounts</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Events4</relationshipName>
    <type>Lookup</type>
</CustomField>