force-app/main/default/objects/Event__c/fields/Initial_CMS_Username_Password__c.field-meta.xml
<CustomField>
    <fullName>Initial_CMS_Username_Password__c</fullName>
    <description>The primary contact&apos;s email address and password as created in the CMS; this will be the admin user for the account and will have access to update Stripe details

Note: As the client can reset their password, this information may not work after it has been shared with the client.</description>
    <inlineHelpText>The primary contact&apos;s email address and password as created in the CMS; this will be the admin user for the account and will have access to update Stripe details

Note: As the client can reset their password, this information may not work after it has been shared with the client.</inlineHelpText>
    <label>Client CMS Username &amp; Password</label>
    <type>TextArea</type>
</CustomField>