force-app/main/default/objects/Event__c/fields/INT_Payment_Costs_Imported__c.field-meta.xml
<CustomField>
    <fullName>INT_Payment_Costs_Imported__c</fullName>
    <label>INT - Payment Costs (Imported)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>