force-app/main/default/objects/Event__c/fields/Internal_auction_item_notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_auction_item_notes__c</fullName>
    <label>Internal auction item notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>