force-app/main/default/objects/Event__c/fields/Internal_logistics_notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_logistics_notes__c</fullName>
    <label>Internal logistics notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>