force-app/main/default/objects/Event__c/fields/Internal_Staffing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Staffing_Notes__c</fullName>
    <label>Internal Staffing Notes</label>
    <type>TextArea</type>
</CustomField>