force-app/main/default/objects/Event__c/fields/iPads_Swipers_Readers__c.field-meta.xml
<CustomField>
    <fullName>iPads_Swipers_Readers__c</fullName>
    <description>Number of iPads and corresponding swipers the client wishes to rent from Givergy. Note, all tablets include a swiper, so please indicate how many sets the client would like to rent.</description>
    <inlineHelpText>Number of iPads and corresponding swipers the client wishes to rent from Givergy. Note, all tablets include a swiper, so please indicate how many sets the client would like to rent.</inlineHelpText>
    <label>Rental iPads &amp; swipers/readers*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>