force-app/main/default/objects/Event__c/fields/iSi_Cost__c.field-meta.xml
<CustomField>
    <fullName>iSi_Cost__c</fullName>
    <label>iSi Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>