force-app/main/default/objects/Event__c/fields/Item_Start_Increased_Commission_Event__c.field-meta.xml
<CustomField>
    <fullName>Item_Start_Increased_Commission_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Item Start Increased (Commission Event)</label>
    <type>Checkbox</type>
</CustomField>