force-app/main/default/objects/Event__c/fields/Items_to_collect__c.field-meta.xml
<CustomField>
    <fullName>Items_to_collect__c</fullName>
    <label>Items to collect*</label>
    <length>255</length>
    <type>Text</type>
</CustomField>