force-app/main/default/objects/Event__c/fields/Jackpot_Prize_Draw_Platform_Payment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Jackpot_Prize_Draw_Platform_Payment_Fee__c</fullName>
    <label>50:50 Prize Draw Platform &amp; Payment Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>