force-app/main/default/objects/Event__c/fields/Kindle_Event__c.field-meta.xml
<CustomField>
    <fullName>Kindle_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kindle Event</label>
    <type>Checkbox</type>
</CustomField>