force-app/main/default/objects/Event__c/fields/Kru_Live_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Kru_Live_Invoice_Number__c</fullName>
    <label>Kru Live Invoice Number</label>
    <type>TextArea</type>
</CustomField>