force-app/main/default/objects/Event__c/fields/Launch_date_and_time__c.field-meta.xml
<CustomField>
    <fullName>Launch_date_and_time__c</fullName>
    <label>Launch date and time</label>
    <type>DateTime</type>
</CustomField>