force-app/main/default/objects/Event__c/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <label>Lead ID</label>
    <type>TextArea</type>
</CustomField>