force-app/main/default/objects/Event__c/fields/Lead_Nature__c.field-meta.xml
<CustomField>
    <fullName>Lead_Nature__c</fullName>
    <label>Event Nature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>