force-app/main/default/objects/Event__c/fields/Leaderboard_sequence__c.field-meta.xml
<CustomField>
    <fullName>Leaderboard_sequence__c</fullName>
    <label>Leaderboard sequence*</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>