force-app/main/default/objects/Event__c/fields/Live_auction_actual__c.field-meta.xml
<CustomField>
    <fullName>Live_auction_actual__c</fullName>
    <label>Live auction actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>