force-app/main/default/objects/Event__c/fields/Live_auction_notes__c.field-meta.xml
<CustomField>
    <fullName>Live_auction_notes__c</fullName>
    <label>Live auction notes*</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>