force-app/main/default/objects/Event__c/fields/Live_auction_start__c.field-meta.xml
<CustomField>
    <fullName>Live_auction_start__c</fullName>
    <label>Live Auction*</label>
    <length>100</length>
    <type>Text</type>
</CustomField>