force-app/main/default/objects/Event__c/fields/Loading__c.field-meta.xml
<CustomField>
    <fullName>Loading__c</fullName>
    <formula>Venue__r.Loading__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loading</label>
    <type>Text</type>
</CustomField>