force-app/main/default/objects/Event__c/fields/Location_of_Givergy_Screens__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Givergy_Screens__c</fullName>
    <label>Location of Givergy Screens</label>
    <type>TextArea</type>
</CustomField>