force-app/main/default/objects/Event__c/fields/Logistics_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Logistics Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Event_Logistics_Coordinator</relationshipName>
    <type>Lookup</type>
</CustomField>