force-app/main/default/objects/Event__c/fields/Low_Fee_Commission_Event_del__c.field-meta.xml
<CustomField>
    <fullName>Low_Fee_Commission_Event_del__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Low Fee + Commission Event</label>
    <type>Checkbox</type>
</CustomField>