force-app/main/default/objects/Event__c/fields/LP_Cancellation_Charge__c.field-meta.xml
<CustomField>
    <fullName>LP_Cancellation_Charge__c</fullName>
    <label>LP : Cancellation Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>