force-app/main/default/objects/Event__c/fields/LP_Other_Costs__c.field-meta.xml
<CustomField>
    <fullName>LP_Other_Costs__c</fullName>
    <label>LP - Other  Costs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>