force-app/main/default/objects/Event__c/fields/LP_TM_TS_Taxi__c.field-meta.xml
<CustomField>
    <fullName>LP_TM_TS_Taxi__c</fullName>
    <label>LP - TM &amp; TS Taxi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>