force-app/main/default/objects/Event__c/fields/LP_Total_Costs__c.field-meta.xml
<CustomField>
    <fullName>LP_Total_Costs__c</fullName>
    <formula>AV_Cost__c + LP_Internet_Costs__c + LP_Logistical_Costs__c + LP_Other_Costs__c + TM_Expenses__c + LP_TM_TS_Taxi__c +  TM_Wage_Complete_Service__c + LP_Cancellation_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LP - Total Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>