force-app/main/default/objects/Event__c/fields/Mantis_Production_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Mantis_Production_Specialist__c</fullName>
    <label>Production Specialist</label>
    <type>TextArea</type>
</CustomField>