force-app/main/default/objects/Event__c/fields/Manual_Reconciliation__c.field-meta.xml
<CustomField>
    <fullName>Manual_Reconciliation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is synced with the CMS. If payments are not being processed through Givergy&apos;s Stripe account and will paid to the client post-event (manual reconciliation), this box will be unticked.</description>
    <inlineHelpText>This is synced with the CMS. If payments are not being processed through Givergy&apos;s Stripe account and will paid to the client post-event (manual reconciliation), this box will be unticked.</inlineHelpText>
    <label>Manual Reconciliation</label>
    <type>Checkbox</type>
</CustomField>