force-app/main/default/objects/Event__c/fields/MCS_number__c.field-meta.xml
<CustomField>
    <fullName>MCS_number__c</fullName>
    <label>IE Job number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>