force-app/main/default/objects/Event__c/fields/Meal_for_staff__c.field-meta.xml
<CustomField>
    <fullName>Meal_for_staff__c</fullName>
    <label>Meal for staff*</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>