force-app/main/default/objects/Event__c/fields/MEM_Booked__c.field-meta.xml
<CustomField>
    <fullName>MEM_Booked__c</fullName>
    <label>MEM Booked</label>
    <type>TextArea</type>
</CustomField>